--- a/about.html
+++ b/about.html
@@ -4,23 +4,49 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+
+        <!-- HEADER -->
         <div id="header">
             <img src="images/logo.png"/>
         </div>
+
+        <!-- TOP NAVIGATION -->
         <div id="top-tabs">
             <a href="index.html">Home</a>
-            <a href="#">Stores</a>
-            <a href="#">Map</a>
-            <a href="#">Movies</a>
+            <a href="stores.html">Stores</a>
+            <a href="map.html">Map</a>
+            <a href="movies.html">Movies</a>
         </div>
 
+        <!-- MAIN CONTENT -->
         <div id="main">
-            <img src="images/about-mall1.png"/> <p>hello</p> <img src="images/about-mall2.png">
+
+            <!-- Top Image Row -->
+            <img src="images/about-mall6.png" width="33%"/>
+            <img src="images/about-mall2.png" width="33%"/>
+            <img src="images/about-mall3.png" width="33%"/>
+
+            <p><b>Pine City Mall</b> is where timeless elegance meets modern luxury. Designed with a refined architectural vision, the mall offers a sophisticated shopping and lifestyle experience for visitors seeking the very best in fashion, dining, entertainment, and leisure.</p>
+
+            <p>Pine City Mall brings together a curated selection of high-end retail brands, exclusive boutiques, and lifestyle stores—all housed within a beautifully designed space featuring classical arches, warm lighting, and premium finishes. From luxury fashion to fine jewelry and home décor, every store is chosen to reflect quality and distinction.</p>
+
+            <p>Whether you're in the mood for casual outdoor dining, gourmet restaurants, or artisanal cafés, Pine City Mall offers a diverse range of culinary experiences. Guests can enjoy alfresco meals on our elegant terrace or explore unique flavors from around the world inside our dining precinct.</p>
+
+            <p>Beyond shopping, Pine City Mall is a vibrant center for entertainment. Our cinema showcases the latest films in a luxurious setting, while curated entertainment zones—including arcades, play areas, and leisure lounges—offer enjoyment for families and guests of all ages.</p>
+
+            <p>Pine City Mall serves as a premier destination for locals and visitors alike. From special events and seasonal celebrations to exclusive launches and promotions, the mall is a hub for community connection and elevated experiences.</p>
+
+            <!-- Bottom Image Row -->
+            <img src="images/about-mall4.png" width="33%"/>
+            <img src="images/about-mall1.png" width="33%"/>
+            <img src="images/about-mall5.png" width="33%"/>
+
         </div>
 
+        <!-- BOTTOM NAVIGATION -->
         <div id="bottom-tabs">
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </div>
 
     </body>
