--- a/message-rec.html
+++ b/message-rec.html
@@ -5,12 +5,10 @@
     </head>
     <body>
 
-        <!-- HEADER -->
         <div id="header">
             <img src="images/logo.png"/>
         </div>
 
-        <!-- TOP NAVIGATION -->
         <div id="top-tabs">
             <a href="index.html">Home</a>
             <a href="stores.html">Stores</a>
@@ -18,20 +16,15 @@
             <a href="movies.html">Movies</a>
         </div>
 
-        <!-- MAIN CONTENT -->
-        <div id="main-home">
-            <img src="images/mall-bg.png" width="100%"/>
-
-            <h2 style="text-align:center; margin-top:20px;">Special Offers</h2>
+        <div id="main">
+            <h2 style="text-align:center;">Message Received</h2>
+            <p style="text-align:center;">Thank you for contacting Pine City Mall. We will respond as soon as possible.</p>
 
             <div style="text-align:center;">
-                <p><b>Zara:</b> 20% off all jackets this weekend!</p>
-                <p><b>H&M:</b> Buy 2 get 1 free on selected items.</p>
-                <p><b>iStore:</b> Free accessories with every iPhone purchase.</p>
+                <a class="button" href="index.html">Return Home</a>
             </div>
         </div>
 
-        <!-- BOTTOM NAVIGATION -->
         <div id="bottom-tabs">
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
